// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateAuditPlan should send update audit plan request when user input all files and click submit 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          auditPlan.update.title
        </div>
        <div
          class="ant-card-extra"
        >
          <button
            class="ant-btn ant-btn-primary"
            type="button"
          >
            <span>
              common.back
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <form
        class="ant-form ant-form-horizontal"
      >
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class="ant-form-item-required"
              for="name"
              title="auditPlan.planForm.name"
            >
              auditPlan.planForm.name
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input ant-input-disabled"
                  disabled=""
                  id="name"
                  placeholder="common.form.placeholder.input"
                  type="text"
                  value="audit_for_java_app20"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class=""
              for="databaseName"
              title="auditPlan.planForm.databaseName"
            >
              auditPlan.planForm.databaseName
              <span
                aria-label="question-circle"
                class="anticon anticon-question-circle ant-form-item-tooltip"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="question-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                  />
                </svg>
              </span>
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-select-single ant-select-allow-clear ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="databaseName_list_0"
                        aria-autocomplete="list"
                        aria-controls="databaseName_list"
                        aria-haspopup="listbox"
                        aria-owns="databaseName_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="databaseName"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="db1"
                    >
                      db1
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-hidden="true"
                    class="ant-select-clear"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class=""
              for="schema"
              title="auditPlan.planForm.schema"
            >
              auditPlan.planForm.schema
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-select-single ant-select-allow-clear ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="schema_list_-1"
                        aria-autocomplete="list"
                        aria-controls="schema_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="schema_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="schema"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="schema1"
                    >
                      schema1
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-hidden="true"
                    class="ant-select-clear"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class="ant-form-item-required"
              for="dbType"
              title="auditPlan.planForm.dbType"
            >
              auditPlan.planForm.dbType
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-select-single ant-select-show-arrow ant-select-disabled"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="dbType_list_0"
                        aria-autocomplete="list"
                        aria-controls="dbType_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="dbType_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        disabled=""
                        id="dbType"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="oracle"
                    >
                      oracle
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class="ant-form-item-required"
              for="auditTaskType"
              title="auditPlan.planForm.taskType"
            >
              auditPlan.planForm.taskType
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-select-single ant-select-show-arrow ant-select-disabled"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="auditTaskType_list_0"
                        aria-autocomplete="list"
                        aria-controls="auditTaskType_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="auditTaskType_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        disabled=""
                        id="auditTaskType"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="普通的SQL审核"
                    >
                      普通的SQL审核
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class=""
              for="params_a"
              title="字段a"
            >
              字段a
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input"
                  id="params_a"
                  type="text"
                  value="123"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class=""
              for="params_b"
              title="字段b"
            >
              字段b
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input"
                  id="params_b"
                  type="text"
                  value="123"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class=""
              for="params_c"
              title="字段c"
            >
              字段c
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  ant-click-animating="true"
                  aria-checked="false"
                  class="ant-switch"
                  id="params_c"
                  role="switch"
                  type="button"
                >
                  <div
                    class="ant-switch-handle"
                  />
                  <span
                    class="ant-switch-inner"
                  />
                  <div
                    class="ant-click-animating-node"
                    style="border-color: buttonface;"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class="ant-form-item-required"
              for="cron"
              title="auditPlan.planForm.cron"
            >
              auditPlan.planForm.cron
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="cron-input-wrapper"
                >
                  <div
                    style="line-height: 32px;"
                  >
                    <div
                      class="ant-radio-group ant-radio-group-outline"
                    >
                      <label
                        class="ant-radio-wrapper ant-radio-wrapper-checked"
                      >
                        <span
                          class="ant-radio ant-radio-checked"
                        >
                          <input
                            checked=""
                            class="ant-radio-input"
                            type="radio"
                            value="Select"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          common.cron.mode.select
                        </span>
                      </label>
                      <label
                        class="ant-radio-wrapper"
                      >
                        <span
                          class="ant-radio"
                        >
                          <input
                            class="ant-radio-input"
                            type="radio"
                            value="Manual"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          common.cron.mode.manual
                        </span>
                      </label>
                    </div>
                  </div>
                  <div
                    class="cron-user-select"
                  >
                    common.time.per
                    <div
                      class="ant-select cron-every-select ant-select-single ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="common.time.year"
                        >
                          common.time.year
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                    <span>
                      common.in
                      <div
                        class="ant-select cron-inline-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="rc_select_TEST_OR_SSR_list"
                                  aria-haspopup="listbox"
                                  aria-owns="rc_select_TEST_OR_SSR_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="rc_select_TEST_OR_SSR"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                  
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            common.time.percommon.time.month
                          </span>
                        </div>
                      </div>
                      common.time.month
                    </span>
                    <span>
                      common.on
                      <div
                        class="ant-select cron-inline-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="rc_select_TEST_OR_SSR_list"
                                  aria-haspopup="listbox"
                                  aria-owns="rc_select_TEST_OR_SSR_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="rc_select_TEST_OR_SSR"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                  
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            common.time.percommon.time.day
                          </span>
                        </div>
                      </div>
                      common.time.no
                    </span>
                    <span>
                      common.and
                      common.time.week
                      <div
                        class="ant-select cron-inline-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="rc_select_TEST_OR_SSR_list"
                                  aria-haspopup="listbox"
                                  aria-owns="rc_select_TEST_OR_SSR_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="rc_select_TEST_OR_SSR"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                  
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            common.time.percommon.time.day
                          </span>
                        </div>
                      </div>
                    </span>
                    <span>
                      common.on
                      <div
                        class="ant-select cron-inline-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="rc_select_TEST_OR_SSR_list"
                                  aria-haspopup="listbox"
                                  aria-owns="rc_select_TEST_OR_SSR_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="rc_select_TEST_OR_SSR"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                  
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            common.time.percommon.time.hour
                          </span>
                        </div>
                      </div>
                      :
                    </span>
                    <span>
                      <div
                        class="ant-select cron-inline-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="rc_select_TEST_OR_SSR_list"
                                  aria-haspopup="listbox"
                                  aria-owns="rc_select_TEST_OR_SSR_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="rc_select_TEST_OR_SSR"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                  
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            common.time.percommon.time.minute
                          </span>
                        </div>
                      </div>
                    </span>
                    <div>
                      common.preview
                      : 
                      * * * * *
                    </div>
                  </div>
                  <div
                    class="cron-user-manual"
                    hidden=""
                  >
                    <input
                      class="ant-input"
                      type="text"
                      value="* * * * *"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class="ant-form-item-no-colon"
              title=" "
            >
               
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <button
                      ant-click-animating-without-extra-node="true"
                      class="ant-btn ant-btn-primary"
                      type="submit"
                    >
                      <span>
                        common.submit
                      </span>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn"
                      type="button"
                    >
                      <span>
                        common.reset
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`UpdateAuditPlan should set form default value to specify instance 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          auditPlan.update.title
        </div>
        <div
          class="ant-card-extra"
        >
          <button
            class="ant-btn ant-btn-primary"
            type="button"
          >
            <span>
              common.back
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <form
        class="ant-form ant-form-horizontal"
      >
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class="ant-form-item-required"
              for="name"
              title="auditPlan.planForm.name"
            >
              auditPlan.planForm.name
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input ant-input-disabled"
                  disabled=""
                  id="name"
                  placeholder="common.form.placeholder.input"
                  type="text"
                  value="audit_for_java_app20"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class=""
              for="databaseName"
              title="auditPlan.planForm.databaseName"
            >
              auditPlan.planForm.databaseName
              <span
                aria-label="question-circle"
                class="anticon anticon-question-circle ant-form-item-tooltip"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="question-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                  />
                </svg>
              </span>
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-select-single ant-select-allow-clear ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="databaseName_list_0"
                        aria-autocomplete="list"
                        aria-controls="databaseName_list"
                        aria-haspopup="listbox"
                        aria-owns="databaseName_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="databaseName"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="db1"
                    >
                      db1
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-hidden="true"
                    class="ant-select-clear"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class=""
              for="schema"
              title="auditPlan.planForm.schema"
            >
              auditPlan.planForm.schema
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-select-single ant-select-allow-clear ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="schema_list_0"
                        aria-autocomplete="list"
                        aria-controls="schema_list"
                        aria-haspopup="listbox"
                        aria-owns="schema_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="schema"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="sqle"
                    >
                      sqle
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-hidden="true"
                    class="ant-select-clear"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class="ant-form-item-required"
              for="dbType"
              title="auditPlan.planForm.dbType"
            >
              auditPlan.planForm.dbType
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-select-single ant-select-show-arrow ant-select-disabled"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="dbType_list_0"
                        aria-autocomplete="list"
                        aria-controls="dbType_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="dbType_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        disabled=""
                        id="dbType"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="oracle"
                    >
                      oracle
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class="ant-form-item-required"
              for="auditTaskType"
              title="auditPlan.planForm.taskType"
            >
              auditPlan.planForm.taskType
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-select-single ant-select-show-arrow ant-select-disabled ant-select-loading"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="auditTaskType_list_0"
                        aria-autocomplete="list"
                        aria-controls="auditTaskType_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="auditTaskType_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        disabled=""
                        id="auditTaskType"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="normal"
                    >
                      normal
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow ant-select-arrow-loading"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="loading"
                      class="anticon anticon-loading anticon-spin"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="loading"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class="ant-form-item-required"
              for="cron"
              title="auditPlan.planForm.cron"
            >
              auditPlan.planForm.cron
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="cron-input-wrapper"
                >
                  <div
                    style="line-height: 32px;"
                  >
                    <div
                      class="ant-radio-group ant-radio-group-outline"
                    >
                      <label
                        class="ant-radio-wrapper ant-radio-wrapper-checked"
                      >
                        <span
                          class="ant-radio ant-radio-checked"
                        >
                          <input
                            checked=""
                            class="ant-radio-input"
                            type="radio"
                            value="Select"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          common.cron.mode.select
                        </span>
                      </label>
                      <label
                        class="ant-radio-wrapper"
                      >
                        <span
                          class="ant-radio"
                        >
                          <input
                            class="ant-radio-input"
                            type="radio"
                            value="Manual"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          common.cron.mode.manual
                        </span>
                      </label>
                    </div>
                  </div>
                  <div
                    class="cron-user-select"
                  >
                    common.time.per
                    <div
                      class="ant-select cron-every-select ant-select-single ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="common.time.year"
                        >
                          common.time.year
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                    <span>
                      common.in
                      <div
                        class="ant-select cron-inline-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="rc_select_TEST_OR_SSR_list"
                                  aria-haspopup="listbox"
                                  aria-owns="rc_select_TEST_OR_SSR_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="rc_select_TEST_OR_SSR"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                  
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            common.time.percommon.time.month
                          </span>
                        </div>
                      </div>
                      common.time.month
                    </span>
                    <span>
                      common.on
                      <div
                        class="ant-select cron-inline-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="rc_select_TEST_OR_SSR_list"
                                  aria-haspopup="listbox"
                                  aria-owns="rc_select_TEST_OR_SSR_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="rc_select_TEST_OR_SSR"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                  
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            common.time.percommon.time.day
                          </span>
                        </div>
                      </div>
                      common.time.no
                    </span>
                    <span>
                      common.and
                      common.time.week
                      <div
                        class="ant-select cron-inline-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="rc_select_TEST_OR_SSR_list"
                                  aria-haspopup="listbox"
                                  aria-owns="rc_select_TEST_OR_SSR_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="rc_select_TEST_OR_SSR"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                  
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            common.time.percommon.time.day
                          </span>
                        </div>
                      </div>
                    </span>
                    <span>
                      common.on
                      <div
                        class="ant-select cron-inline-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="rc_select_TEST_OR_SSR_list"
                                  aria-haspopup="listbox"
                                  aria-owns="rc_select_TEST_OR_SSR_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="rc_select_TEST_OR_SSR"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                  
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            common.time.percommon.time.hour
                          </span>
                        </div>
                      </div>
                      :
                    </span>
                    <span>
                      <div
                        class="ant-select cron-inline-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="rc_select_TEST_OR_SSR_list"
                                  aria-haspopup="listbox"
                                  aria-owns="rc_select_TEST_OR_SSR_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="rc_select_TEST_OR_SSR"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                  
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            common.time.percommon.time.minute
                          </span>
                        </div>
                      </div>
                    </span>
                    <div>
                      common.preview
                      : 
                      * * * * *
                    </div>
                  </div>
                  <div
                    class="cron-user-manual"
                    hidden=""
                  >
                    <input
                      class="ant-input"
                      type="text"
                      value="* * * * *"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item"
        >
          <div
            class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-6"
          >
            <label
              class="ant-form-item-no-colon"
              title=" "
            >
               
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-14"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-primary"
                      type="submit"
                    >
                      <span>
                        common.submit
                      </span>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn"
                      type="button"
                    >
                      <span>
                        common.reset
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
